# hydrium

./: .gitignore  .gitmodules  LICENSE  README.md  hydrium.c  meson.build  windows-cross.ini
libhydrium/: bitwriter.c  bitwriter.h  encoder.c  entropy-test.c  entropy.c  entropy.h  hydrium.c  hydrium.h  internal.h  libhydrium.c  libhydrium.h  math-functions.h  modular.c  modular.h  osdep.h  xyb.c  xyb.h
libhydrium/color/: xyb.c  xyb.h
libhydrium/writer/: bitwriter.c  bitwriter.h
src/: hydrium.c
src/include/libhydrium/: libhydrium.h
src/libhydrium/: bitwriter.c  bitwriter.h  cluster-map.c  encoder.c  encoder.h  entropy.c  entropy.h  format.c  format.h  internal.h  libhydrium.c  libhydrium.h  math-functions.h  memory.c  memory.h  xyb.c  xyb.h
subprojects/: spng.wrap
